# gaia-skill-tree

./: .env  .gitattributes  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  AUDIT-sweep.md  CHANGELOG.md  CLAUDE.md  CONTEXT-MAP.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  DEV.md  FIX_SKILL_REGISTRY_LINKS.md  GEMINI.md  GOVERNANCE.md  LICENSE  META.md  METASHIFT.md  META_AUDIT_HANDOVER.md  MISSION.md  PATENTS.md  PLAN.md  PRIVACY.md  PRODUCT.md  PR_DRAFT.md  README.md  TIMELINE_HANDOVER.md  Taskfile.yml  base_gaia.json  combinations.md  diff.txt  extracted_old.json  fix_lint.py  low_star_review.json  package-lock.json  package.json  patch_assertion.py  patch_packaging_tests.py  (+17 more)
.Jules/: palette.md
.antigravitycli/: eeaa332e-eeaa-438a-a08f-573cc4b35abb.json
.claude/: settings.json  settings.local.json
.firecrawl/: alphagenome-search.md  chembl-ss.md  deepmind-chembl-skill.md  teach-yt2.md
.gaia/: config.json
.githooks/: pre-commit
.github/: CODEOWNERS  labels.yml
.jules/: bolt.md  collection.md  palette.md  sentinel.md
.pi/: settings.json
docs/: CLOUDFLARE-SETUP.md  CNAME  DESIGN.md  GOVERNANCE.md  PLAN.md  SPEC.md  about.html  agent.md  agent_dispatch_plan.md  codex.html  guard-topology.md  how-we-do-things.html  index.html  index.md  install.ps1  install.sh  llms.txt  meta.html  privacy.html  rank-vocabulary-guard.md  robots.txt  sitemap.xml  skill_source_contributions.md  starless.html  tree.md  wiki.md  wrangler.jsonc  wrangler.toml
evidence/: source_report_2026_06_18.md  source_report_2026_06_19.md  source_report_2026_07_13.md  tier_1.md  tier_2.md  tier_3.md  tier_4.md  tier_5.md  tier_6.md  unified_evidence_lake.md  verification_process.html
founder/: AA_LEADERBOARD_REFERENCE.md  API_PRODUCT_STORY.md  CLAUDE.md  COST.md  DESIGN.md  FOUNDER_APPEND.md  GAIA_ROADMAP v2 (BUILD).md  GAIA_ROADMAP v3 (BUILD).md  GAIA_ROADMAP v4 (BUILD).md  GAIA_ROADMAP.md  GIT.md  MEMORY.md  ORCHESTRATOR.md  PHASE1_PLAN.md  PRODUCT.md  README.md  SKILL_OPT_BRAINSTORM.md  YGGDRASIL_II_DESIGN_LEDGER.md  issues.json  yggdrasil-commission.md
graph/: README.md  embeddings.json  gaia.gexf  gaia.json  real_skill_catalog.json
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  manifest.json
handovers/: GRADE_LAYERING_HANDOVER.md  PR3_EVIDENCE_BACKFILL_HANDOVER.md  TRUST_IMPL_HANDOVER.md
intake/: README.md
mcp-server/: README.md  package-lock.json  package.json
plugin/: README.md  package-lock.json  package.json
registry/: combinations.md  gaia.gexf  gaia.json  layouts_3d.json  named-skills.json  real-skills.html  real-skills.json  real-skills.md  registry.md  skill-sources.md
schema/: combination.schema.json  pluginConfig.schema.json  realSkillCatalog.schema.json  skill.schema.json  skillBatch.schema.json  skillTree.schema.json
scripts/: README.md  _atlas_helpers.py  _extract_timeline.py  _recreate_named_skills.py  _tree_renderer.py  add_agent_primitives.py  add_batch_2_skills.py  add_batch_4_skills.py  add_hermes_batch.py  add_hermes_skills.py  add_intelligentcode_skills.py  add_post.py  (+70 more)
(+3208 files in other folders)
