[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gaia-cli"
version = "1.0.0"
description = "Gaia AI Agent Skill Registry CLI"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.17.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
]

[project.scripts]
gaia = "plugin.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["plugin*"]
